RESOLVED FIXED11814
REGRESSION(r18098): Find does not work with capital letters
https://bugs.webkit.org/show_bug.cgi?id=11814
Summary REGRESSION(r18098): Find does not work with capital letters
Matt Lilek
Reported 2006-12-12 12:06:15 PST
Find doesn't seem to like it when you use capitol letters when searching anymore. 1. Go to http://webkit.org/blog/ 2. Open the find window and search for "Pinky" - it will angrily DOOT at you and say nothing is found. 3. Search the same page for "pinky" and it will highlight the word in the blog title. Using the r18159 nightly and Safari 2.0.4.
Attachments
Remove incorrect check (30.56 KB, patch)
2006-12-16 01:47 PST, mitz
no flags
Remove incorrect check (3.16 KB, patch)
2006-12-16 01:59 PST, mitz
ap: review+
Matt Lilek
Comment 1 2006-12-12 12:30:22 PST
Seems to have been broken by the ICU stuff in r18098.
mitz
Comment 2 2006-12-16 00:34:20 PST
The second condition here in WTF::Unicode::foldCase() is wrong, causing it to fail in the common case: + *error = !(U_SUCCESS(status) && realLength < resultLength); The correct condition 'realLength <= resultLength' is redundant, since if the required length is greater than the buffer, status is set to U_BUFFER_OVERFLOW_ERROR which is not a success.
mitz
Comment 3 2006-12-16 01:47:51 PST
Created attachment 11875 [details] Remove incorrect check
mitz
Comment 4 2006-12-16 01:51:57 PST
Comment on attachment 11875 [details] Remove incorrect check Alexey suggested making the test dump as text. Updated patch coming up.
mitz
Comment 5 2006-12-16 01:59:38 PST
Created attachment 11876 [details] Remove incorrect check Changed test to dump as text.
Alexey Proskuryakov
Comment 6 2006-12-16 02:01:22 PST
Comment on attachment 11876 [details] Remove incorrect check r=me
Alexey Proskuryakov
Comment 7 2006-12-16 02:06:12 PST
Committed revision 18247.
Note You need to log in before you can comment on or make changes to this bug.