2006-12-16  Mitz Pettel  <mitz@webkit.org>

Reviewed by Alexey.

        - fix http://bugs.webkit.org/show_bug.cgi?id=11814
          REGRESSION(r18098): Find does not work with capital letters

        Test: editing/execCommand/findString-3.html

        * wtf/unicode/icu/UnicodeIcu.h:
        (WTF::Unicode::foldCase): Changed to not return an error if the result fits
        in the buffer without a null terminator.



Canonical link: https://commits.webkit.org/15319@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18247 268f45cc-cd09-0410-ab3c-d52691b4dbfc